--- a/mosquito-control/index.html
+++ b/mosquito-control/index.html
@@ -645,7 +645,7 @@ Even with a packed schedule in Kailua, our flexibility works for you! A dedicate
 <h4>Larviciding</h4>
 <p>Applying larvicides to standing water to prevent mosquito larvae from developing into adults. We use environmentally friendly products that are safe for non-target species. We will help to remove any <a href="/spider-removal">spider removal issues</a> that may be occurring as a result of your mosquito problem.</p>
 <h4>Adulticiding</h4>
-<p>Using fogging or spraying treatments to eliminate adult mosquitoes. We employ advanced application techniques to ensure thorough coverage while minimizing environmental impact. The goal is for you to be <a href="/cockroch-control">cockroach control</a> free as well!</p>
+<p>Using fogging or spraying treatments to eliminate adult mosquitoes. We employ advanced application techniques to ensure thorough coverage while minimizing environmental impact. The goal is for you to be cockroach control free as well!</p>
 <h4>Barrier Treatments</h4>
 <p>Creating a protective barrier around your property to repel mosquitoes. This involves treating vegetation, fences, and other areas where mosquitoes rest. Barrier treatments provide long-lasting protection against mosquito infestations. We will walk through the <a href="/ant-control">ant control</a> plan as well during this process!</p>
 <h3>Prevention and Education</h3>
